@@ -203,6 +203,9 @@ Trunk - Unreleased
     HIVE-495. Fix join of a table of ThriftSerDe with complex columns
     (Zheng Shao via namit)
 
+    HIVE-532. Predicates not pushed above limit
+    (Prasad Chakka via namit)
+
 Release 0.3.1 - Unreleased
 
   INCOMPATIBLE CHANGES
